--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="col-md-4">
             <div class="deposit status">
                 <h5>Deposit</h5>
-                <h2>$00</h2>
+                <h2>$ <span id="currentDeposit">00</span></h2>
             </div>
         </div>
         <div class="col-md-4">
@@ -37,7 +37,7 @@
         <div class="col-md-4">
             <div class="balance status">
                 <h5>Balance</h5>
-            <h2>$1240</h2>
+            <h2>$ <span id="currentBalance">1240</span></h2>
             </div>
             
         </div>
@@ -72,13 +72,27 @@ loginBtn.addEventListener("click", function(){
     logInArea.style.display = "none";
     const transectionArea = document.getElementById("transection-area");
     transectionArea.style.display = "block";
+})
+    const depositBtn = document.getElementById("addDeposit");
+addDeposit.addEventListener("click", function(){
+   const depositAmount = document.getElementById("depositAmount").value;
+   const depositNumber = parseFloat(depositAmount);
+
+   const currentDeposit = document.getElementById("currentDeposit").innerText;
+   const currentDepositNumber = parseFloat(currentDeposit);
+   const totalDeposit = depositNumber + currentDepositNumber;
+   document.getElementById("currentDeposit").innerText = totalDeposit;
+
+   const currentBalance = document.getElementById("currentBalance").innerText;
+   const currentBalanceNumber = parseFloat(currentBalance);
+   const totalBalance = depositNumber + currentBalanceNumber;
+   document.getElementById("currentBalance").innerText = totalBalance;
+
+   document.getElementById("depositAmount").value="";
+   
     
     })
-    const depositBtn = document.getElementById("addDeposit");
-depositBtn.addEventListener("click", function(){
-const depositAmount = document.getElementById("depositAmount").value;
-const depositNumber= parseFloat(depositAmount);
-})
-    </script>
+
+ </script>
 </body>
 </html>
